# scRITMO

./: .gitignore  README.md  pyproject.toml
rhythm_module/: RITMO.py  RITMO_base.py  RITMO_helper.py  __init__.py  basics.py  circular.py  data_simulation.py  linear_regression.py  numpyro_models.py  numpyro_models_handles.py  plot.py  posterior.py  pseudobulk.py  simulations.py
scRITMO/: RITMO.py  RITMO_base.py  __init__.py  basics.py  circular.py  linear_regression.py  numpyro_models.py  numpyro_models_handles.py  plot.py  posterior.py  pseudobulk.py  readme.md
src/scritmo/: __init__.py  basics.py  beta.py  circular.py  gene_lists.py  glm.py  linear_regression.py  plot.py  power_spherical.py  ppca.py  pseudobulk.py
src/scritmo/circular/: __init__.py  align.py  circular.py  median.py  von_mises.py
src/scritmo/dryseq/: dryseq_fitting.py  dryseq_main.py  dryseq_utils.py
src/scritmo/jax_module/: RITMO.py  RITMO_base.py  RITMO_helper.py  __init__.py  numpyro_models.py  posterior.py  simulations.py
src/scritmo/plot/: __init__.py  bar_box.py  cedric_fn.py  data_and_fits.py  histos.py  misc.py  panels_constants.py  panels_plot_helpers.py  plot_generator_fns.py  utils.py
src/scritmo/pychiral/: __init__.py  chiral.py  em.py  helper_fn.py  stat_phys.py
