[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scritmo"
version = "0.1.0"
description = "A suite of useful function for single cell and rhythic analysis"
authors = [
  { name = "Andrea Salati", email = "andrea.salati96@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

