[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scritmo"
version = "0.1.0"
description = "A suite of useful function for single cell and rhythic analysis"
authors = [
  { name = "Andrea Salati", email = "andrea.salati96@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

requires-python = ">=3.11" 
dependencies = [
    "adjustText>=1.3.0",
    "anndata>=0.12.7",
    "joblib>=1.4.2",
    "matplotlib>=3.7.1",
    "numpy>=1.26.0",   
    "pandas>=2.1.0",   
    "patsy>=1.0.1",
    "scanpy>=1.10.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "statannotations>=0.7.2",
    "statsmodels>=0.14.1",
    "tqdm>=4.67.1",
]
